--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
   </head>
   <body>
-    <py-script>
-      print("hello world!")
-    </py-script>
+    <script type="mpy" src="Main_SnapGame.py"></script>
   </body>
 </html>
