--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
   </head>
   <body>
-    <py-script src="./Main_SnapGame.py"></py-script>
+    <py-script src="Main_SnapGame.py"></py-script>
   </body>
 </html>
