--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <py-config>
       [[fetch]]
+      from = "./"
       files = ["card.py", "deck.py", "player.py"]
     </py-config>
     <py-script src="Main_SnapGame.py"></py-script>
