--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+    
   </head>
   <body>
     <py-config>
       [[fetch]]
-      from = "./"
-      files = ["card.py", "deck.py", "player.py"]
+      files = ["./card.py", "./deck.py", "./player.py"]
     </py-config>
     <py-script src="Main_SnapGame.py"></py-script>
   </body>
