--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
       [[fetch]]
       files = ["./card.py", "./deck.py", "./player.py"]
     </py-config>
-    <py-script src="Main_SnapGame.py"></py-script>
+    <py-script src="./main.py"></py-script>
   </body>
 </html>
