--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
-    
+    <py-env>
+      -path
+        -./card.py
+        -./deck.py
+        -./player.py
+    </py-env>
   </head>
   <body>
     <py-config>
