--- a/index.html
+++ b/index.html
@@ -3,17 +3,11 @@
   <head>
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
-    <py-env>
-      -path
-        -./card.py
-        -./deck.py
-        -./player.py
-    </py-env>
+    
   </head>
   <body>
-    <py-config>
-      [[fetch]]
-      files = ["./card.py", "./deck.py", "./player.py"]
+    <py-config type="toml">
+      paths = [card.py, deck.py, player.py]
     </py-config>
     <py-script src="./main.py"></py-script>
   </body>
