--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     
   </head>
   <body>
-    <py-config>
-      [[fetch]]
-      from = "https://github.com/DornLU/SnapGame_CertIV/blob/testing"
-      files = ["card.py", "deck.py", "player.py"]
-    </py-config>
+    <py-config src="./pyscript.toml"></py-config>
     <py-script src="./main.py"></py-script>
   </body>
 </html>
